--- a/kundenkarte.html
+++ b/kundenkarte.html
@@ -16,7 +16,7 @@
             <!-- Navigationsleiste -->
             <nav>
               <ul>
-                <li><a href="main.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="team.html">Team</a></li>
                 <li><a href="kundenkarte.html">Kundenkarte</a></li>
                 <li><a href="#">unser Service</a></li>
